# DGAcpp

./: .gitignore  1p-data.hdf5  CMakeLists.txt  DGAcpp  dga_config.yaml  g4iw_sym.hdf5
header_files/: dga_config.h  hamiltonian.h  input_parser.h  kgrid.h
src/: dga_config.cpp  dga_main.cpp  enums.cpp  hamiltonian.cpp  input_parser.cpp  kgrid.cpp
